Incluyo JDBC driver

--- a/acceso-datos/pom.xml
+++ b/acceso-datos/pom.xml
@@ -3,4 +3,13 @@
   <groupId>ejemplo.jdbc</groupId>
   <artifactId>acceso-datos</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+	  <dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.6</version>
+	  </dependency>
+  </dependencies>
+  
 </project>
